--- a/index.html
+++ b/index.html
@@ -18,8 +18,10 @@
     <form action="">
       <input id="m" autocomplete="off" /><button>Send</button>
     </form>
+    <button class="room-list__update">Update</button>
     <script src="/socket.io/socket.io.js"></script>
-    <script src="http://code.jquery.com/jquery-1.11.1.js"></script>
+    <script src="/jquery-2.1.4.min.js"></script>
+    <script src="/vue.min.js"></script>
     <script src="/index.js"></script>
   </body>
 </html>
